--- a/html/about.html
+++ b/html/about.html
@@ -60,7 +60,7 @@
     <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
         <div class="container">
             <div class="navbar-header">
-                <a class="navbar-brand" href="../index.html">Car Shop</a>
+                <a class="navbar-brand" href="../index.html">SHOP</a>
             </div>
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
